--- a/OventApi/appsettings.json
+++ b/OventApi/appsettings.json
@@ -13,9 +13,9 @@
     }
   },
   "OventServiceConfiguration": {
-    "zwayApiHost": "someUrl",
-    "kodiHost": "someUrl",
-    "kodiUserName": "username",
-    "kodiPassword": "password"
+    "zwayApiHost": "http://home.ovent.net:8083",
+    "kodiHost": "home.ovent.net",
+    "kodiUserName": "Ovent",
+    "kodiPassword": "P@ssw0rd"
   }
 }
