--- a/OventApi/OventApi.csproj
+++ b/OventApi/OventApi.csproj
@@ -15,10 +15,11 @@
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+     <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OventServiceCore\OventService.csproj" />
+    <ProjectReference Include="..\OventService\OventService.csproj" />
   </ItemGroup>
 
 </Project>
