--- a/OventApi/OventApi.csproj
+++ b/OventApi/OventApi.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <ApplicationInsightsResourceId>/subscriptions/c4a3ca29-6d92-48e8-8f9f-935dea33ef6c/resourcegroups/Perso/providers/microsoft.insights/components/Germaine Api</ApplicationInsightsResourceId>
+    <ApplicationInsightsAnnotationResourceId>/subscriptions/c4a3ca29-6d92-48e8-8f9f-935dea33ef6c/resourcegroups/Perso/providers/microsoft.insights/components/Germaine Api</ApplicationInsightsAnnotationResourceId>
+    <UserSecretsId>5f853678-db4e-4d6e-a896-0ae4ff2bede3</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,8 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" /> 
   </ItemGroup>
 
   <ItemGroup>
@@ -20,6 +24,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OventService\OventService.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
 </Project>
